6. Video is not aligned :fix

--- a/src/app/layouts/public-layout/components/navbar/navbar.component.scss
+++ b/src/app/layouts/public-layout/components/navbar/navbar.component.scss
@@ -82,7 +82,7 @@ li:hover {
 .c-btn {
   width: 106px;
   height: 38px;
-  margin-right: 13px;
+  // margin-right: 13px;
   font-weight: 600;
   font-size: 17px;
 }
@@ -102,7 +102,6 @@ li:hover {
   .c-btn {
     width: 137px;
     height: 48px;
-    margin-right: 13px;
     font-weight: 600;
     font-size: 17px;
   }
