--- a/src/app/modules/home/components/future-estimate/future-estimate.component.scss
+++ b/src/app/modules/home/components/future-estimate/future-estimate.component.scss
@@ -19,7 +19,7 @@
   flex: 1;
   padding-right: 0px;
   padding-top: 0px;
-  padding: 0px 20px;
+  padding: 0px 0px 0px 20px;
   height: 280px;
 }
 .check-text {
